--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ a {
 }
 
 a:hover {
-	color: #292929;
+	color: #1874c1;
 	text-decoration: none;
 }
 
@@ -709,19 +709,17 @@ input[type="url"] {
 	font-size: 12px;
 }
 
+.news-block .view-article {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
 .news-block .post-title {
 	text-transform: uppercase;
 	color: #000;
 	font-weight: bold;
 	padding: 10px 0;
-}
-
-.news-block .view-article {
-	color: #1874c1;
-}
-
-.news-block .view-article:hover {
-	color: #94cfff;
+	margin: 0;
 }
 
 .transport-companies-slider-wrap {
@@ -763,21 +761,13 @@ input[type="url"] {
 /*------------------------------------*\
     Sidebar
 \*------------------------------------*/
+.left-sidebar .menu {
+	flex-wrap: wrap;
+}
+
 .left-sidebar .menu .menu-item {
 	display: block;
-}
-
-.left-sidebar .menu .menu-item a {
-	position: relative;
-	border-bottom: 1px solid #ebebeb;
-	color: #848484;
-	display: block;
-	padding: 11px 0;
-	position: relative;
-}
-
-.left-sidebar .menu .menu-item a:hover {
-	color: #1874c1;
+	width: 100%;
 }
 
 .left-sidebar .menu .menu-item a:after {
@@ -789,63 +779,228 @@ input[type="url"] {
 	top: 7px;
 }
 
+.left-sidebar ul,
+.right-sidebar ul {
+	margin-left: 0;
+	list-style: none;
+}
+
+.left-sidebar li a,
+.right-sidebar li a {
+	position: relative;
+	border-bottom: 1px solid #ebebeb;
+	color: #848484;
+	display: block;
+	padding: 11px 0;
+}
+
+.left-sidebar li a:hover,
+.right-sidebar li a:hover {
+	color: #1874c1;
+}
+
+.sidebar .widget-title {
+	margin-bottom: 25px;
+	margin-top: 30px;
+	color: #000;
+}
+
+.sidebar .sidebar-widget > div:first-child .widget-title {
+	margin-top: 0;
+}
+
 /*------------------------------------*\
     Equipment Page
 \*------------------------------------*/
 .circles-block {
-	position: relative;
-	height: 650px;
+	position: relative;	/*height: 650px;*/
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	-ms-flex-flow: row wrap;
+	flex-flow: row wrap;
 }
 
 .circles-block .circle {
-	width: 250px;
-	display: flex;
+	display: block;
 	border-radius: 100%;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
 	border: 1px solid #1874c1;
-	overflow: hidden;
-	position: absolute;
-	height: 250px;
-	margin-left: -125px;
+	overflow: hidden;    /* position: absolute; */
+
+	/* margin-left: -125px; */
+	position: relative;    /* width: 100%; */
+
+	/* height: 100%; */
+	max-width: 250px;
+	margin: 0 auto;
 }
 
+.circles-block .circle:before {
+	content: '';
+	display: block;
+	padding-bottom: 100%;
+}
+
+/*
 .circles-block .circle:first-child {
-	top: 0;
-	left: 25%;
+top: 0;
+left: 25%;
 }
 
 .circles-block .circle:nth-child(2) {
-	top: 0;
-	left: 75%;
+top: 0;
+left: 75%;
 }
 
 .circles-block .circle:nth-child(3) {
-	top: 200px;
-	left: 50%;
+top: 200px;
+left: 50%;
 }
 
 .circles-block .circle:nth-child(4) {
-	top: 400px;
-	left: 25%;
+top: 400px;
+left: 25%;
 }
 
 .circles-block .circle:nth-child(5) {
-	top: 400px;
-	left: 75%;
+top: 400px;
+left: 75%;
+}*/
+.circles-block .columns {
+	-webkit-flex: 1 1 0px;
+	-ms-flex: 1 1 0px;
+	flex: 1 1 0px;
 }
 
 .circles-block .circle-text {
-	display: flex;
+
+	/*display: flex;
 	align-items: center;
-	justify-content: center;
-	height: 100%;
+	justify-content: center;*/
+
+	/*height: 100%;*/
 	text-align: center;
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	transform: translateY(-50%);
 }
 
 .circles-block a:hover {
 	color: #1874c1;
+	border-color: #1874c1;
+}
+
+/*------------------------------------*\
+    Product Category Page
+\*------------------------------------*/
+.products-block .block-title {
+	text-align: center;
+	font-size: 24px;
+	margin: 20px auto;
+}
+
+.products-block .product-item {
+	text-align: center;
+}
+
+.products-block .product-item:last-child:not(:first-child),
+.products-block .product-item:last-child:not(:first-child) {
+	float: left;
+}
+
+.products-block .product-item a {
+	display: block;
+	border: 1px solid #ebebeb;
+	max-width: 60%;
+	margin: 0 auto 20px;
+	padding: 10px 0;
+	font-size: 20px;
+	-webkit-transition: color, border-color 0.2s;
+	-moz-transition: color, border-color 0.2s;
+	-o-transition: color, border-color 0.2s;
+	transition: color, border-color 0.2s;
+}
+
+.products-block .product-item a:hover {
+	color: #1874c1;
+	border-color: #1874c1;
+}
+
+/*------------------------------------*\
+    Product Page
+\*------------------------------------*/
+#product-tabs .tabs-title > a {
+	font-size: 14px;
+}
+
+#product-tabs .tabs-title > a:hover,
+#product-tabs .tabs-title>a:focus,
+#product-tabs .tabs-title>a[aria-selected=true] {
+	color: #1874c1;
+}
+
+.product-tabs-wrap .tabs-content {
+	border: none;
+}
+
+/*------------------------------------*\
+    Product Page
+\*------------------------------------*/
+.post-thumb > img {
+	margin-bottom: 20px;
+}
+
+.post-details {
+	margin-bottom: 10px;
+}
+
+.post-title {
+	margin-bottom: 15px;
+}
+
+.post-title a {
+	text-transform: uppercase;
+}
+
+.post-content {
+	border-top: 1px solid rgba(0, 0, 0, 0.05);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+article.post .post-content,
+.search  .post-content {
+	border-bottom: none;
+}
+
+.post-details .date {
+	line-height: 20px;
+}
+
+.post-details .date > span {
+	margin-right: 5px;
+}
+
+.view-article {
+	display: block;
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
+
+.view-article a {
+	color: #1874c1;
+	text-transform: uppercase;
+}
+
+.view-article a:hover {
+	color: #94cfff;
+}
+
+.pagination li {
+	font-size: 1.2rem;
 }
 
 /*------------------------------------*\
@@ -884,8 +1039,13 @@ input[type="url"] {
 	padding: 30px 15px 50px;
 }
 
+.footer .menu {
+	flex-wrap: wrap;
+}
+
 .footer .menu-item {
 	display: block;
+	width: 100%;
 }
 
 .footer .menu-item > a {
